PR 5160 * elflink.c (eval_symbol): Remove bufsz variable and use sizeof(symbuf) where necessary.